--- a/register_11.html
+++ b/register_11.html
@@ -26,9 +26,9 @@
 	width: 305px;
         height: 400px;
 	float:left;
-        margin-top: 20px;
+        margin-top: 0px;
 }
-.column tr td { padding-top: 15px;
+.column tr td { padding-top: 0px;
                 padding-bottom: 15px;
 }
 
@@ -43,9 +43,9 @@
 	width: 605px;
         height: 100%;
 	float:left;
-        margin-top: 20px;
+        margin-top: 0px;
 }
-.column2 tr td { padding-top: 15px;
+.column2 tr td { padding-top: 0px;
                 padding-bottom: 15px;
 }
 
@@ -106,11 +106,11 @@
                 <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="width: 100%;"></a>
         </div>
         <div class="tophead" style="text-align: center;width: 100%; max-width: 250px;padding-top: 20px;padding-bottom: 50px;float: right">
-                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Blog</a>
+                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Blog</a>
                  
-                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Free Webinars | </a>
+                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Free Webinars | </a>
                   
-                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">About  |</a>
+                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">About  |</a>
 		
         </div> <div style="clear: both;"></div>
     <div class="column-wrap">
@@ -126,7 +126,7 @@
                                 … to start finding success! 
                             </div>
                             <div class="text6" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #686868;font-size: 20px;padding-left: 15px; padding-top: 10px;width: 98%">
-                                <br><br>
+                                <br>
                                 Hey [First Name],<br><br>
                                 Marketfy was created to help you trade & invest better. <br><br>
                                 So we’re always proud when we hear from members who are having success, using Marketfy with [name] and [name] did. <br><br>
