--- a/register_3.html
+++ b/register_3.html
@@ -26,7 +26,7 @@
 	width: 305px;
         height: 400px;
 	float:left;
-        margin: 20px 10px 80px;
+        margin: 20px 10px 5px;
 }
 .column tr td { padding: 15px; }
 .column-wrap { 
@@ -92,14 +92,14 @@
                 <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="width: 100%;"></a>
         </div>
         <div class="tophead" style="text-align: center;width: 100%; max-width: 250px;padding-top: 20px;padding-bottom: 50px;float: right">
-                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Blog</a>
+                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Blog</a>
                  
-                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Free Webinars | </a>
+                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Free Webinars | </a>
                   
-                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">About  |</a>
+                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">About  |</a>
 		
         </div> <div style="clear: both;"></div>
-    <div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 70px;">
+    <div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 20px;">
         <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
             Just for you…
         </div>
@@ -148,9 +148,9 @@
                                     <img src="http://marketfy.com/image/5d4fd284876a9cc877e7d1992d280ec7/268/155/">
                                 </div>
                                 <div class="textdesc" style="padding: 0px 15px 0px 15px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 18px;text-align: center;margin-top: 10px;">
-                                    Real-time stock chatroom with an expert trading professional.
+                                    Real-time stock chatroom with an expert trading<br> professional.
                                 </div>
-                                <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 55px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;">
+                                <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 30px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;">
                                     <a href="http://marketfy.com/store/item/stock-trader-chat-room/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">
                                         LEARN MORE
                                     </a>
@@ -173,7 +173,7 @@
                                     <img src="http://marketfy.com/image/9e1e65f57cc27f3096f6699828f51183/268/155/">
                                 </div>
                                 <div class="textdesc" style="padding: 0px 15px 0px 15px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 18px;text-align: center;margin-top: 10px;">Beat the Market with ETF Trade Alerts & Professional Research
-                                    <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 35px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/item/etf-professor/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">LEARN MORE</a></div>
+                                    <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 30px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/item/etf-professor/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">LEARN MORE</a></div>
                                 </div>
                             </div>
                         </td>
