--- a/register_9.html
+++ b/register_9.html
@@ -40,11 +40,11 @@
                 <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="width: 100%;"></a>
         </div>
         <div class="tophead" style="text-align: center;width: 100%; max-width: 250px;padding-top: 20px;padding-bottom: 50px;float: right">
-                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Blog</a>
+                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Blog</a>
                  
-                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Free Webinars | </a>
+                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Free Webinars | </a>
                   
-                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">About  |</a>
+                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">About  |</a>
 		
         </div> <div style="clear: both;"></div>
     <div class="imagebig" style="text-align: center; background-color: #ffffff; padding-top: 45px;">
