--- a/register_1.html
+++ b/register_1.html
@@ -24,7 +24,7 @@
                                 width: 305px;
                                 height: 400px;
                                 float:left;
-                                margin: 20px 10px 80px;
+                                margin: 5px 10px 80px;
                         }
                         .column tr td { 
                             padding: 15px; 
@@ -100,11 +100,11 @@
                 <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="width: 100%;"></a>
         </div>
         <div class="tophead" style="text-align: center;width: 100%; max-width: 250px;padding-top: 20px;padding-bottom: 50px;float: right">
-                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Blog</a>
+                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Blog</a>
                  
-                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Free Webinars | </a>
+                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Free Webinars | </a>
                   
-                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">About  |</a>
+                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">About  |</a>
 		
         </div> <div style="clear: both;"></div>
 	<div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 20px;">
