--- a/register_10.html
+++ b/register_10.html
@@ -39,11 +39,11 @@
                 <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="width: 100%;"></a>
         </div>
         <div class="tophead" style="text-align: center;width: 100%; max-width: 250px;padding-top: 20px;padding-bottom: 50px;float: right">
-                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Blog</a>
+                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Blog</a>
                  
-                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Free Webinars | </a>
+                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Free Webinars | </a>
                   
-                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">About  |</a>
+                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">About  |</a>
 		
         </div> <div style="clear: both;"></div>
     <div class="imagebig" style="text-align: center; background-color: #ffffff; padding-top: 45px;">
@@ -57,7 +57,7 @@
            What will you do once you reach your trading gaols? 
         </div>
         <div class="button1" style=" text-align: center; background-color: #4a6785;width: 395px;height: 54px;margin: 0 auto;margin-top: 30px;margin-bottom: 25px;text-align: center;font-size: 18px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;">
-            <a href="http://marketfy.com/store/" style="padding: 10px 100px 10px 100px;text-decoration: none;color: #ffffff;">
+            <a href="http://marketfy.com/store/" style="margin: 0px auto;;text-decoration: none;color: #ffffff;">
                 START HERE TO FIND OUT >>
             </a>
         </div>
