--- a/register_2.html
+++ b/register_2.html
@@ -29,7 +29,7 @@
 	width: 305px;
         height: 400px;
 	float:left;
-        margin: 20px 10px 80px;
+        margin: 0px 10px 20px 10px;
 }
 .column tr td { padding: 15px; }
 .column-wrap { 
@@ -60,7 +60,7 @@
 }
 .boxs2{
          background-color: #f2f2f2;
-         height: 400px;
+         height: 350px;
     }
     @media screen {
         .tophead {
@@ -95,18 +95,18 @@
                 <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="width: 100%;"></a>
         </div>
         <div class="tophead" style="text-align: center;width: 100%; max-width: 250px;padding-top: 20px;padding-bottom: 50px;float: right">
-                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Blog</a>
+                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Blog</a>
                  
-                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Free Webinars | </a>
+                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Free Webinars | </a>
                   
-                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">About  |</a>
+                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">About  |</a>
 		
         </div> <div style="clear: both;"></div>
     <div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 70px;">
         <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
           Get started with Marketfy…
     </div>
-        <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;">
+        <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #000;font-size: 20px;padding-left: 15px;">
             <br>  Hey [first name], <br /> <br /> 
 
         Marketfy brings together the top trade alerts, education, trading rooms, and chatrooms to one, easy-to-use platform. <br /> <br /> 
