--- a/register_4.html
+++ b/register_4.html
@@ -26,7 +26,7 @@
 	width: 305px;
         height: 400px;
 	float:left;
-        margin-top: 20px;
+        margin-top: 0px;
 }
 .column tr td { padding-top: 15px;
                 padding-bottom: 15px;
@@ -43,7 +43,7 @@
 	width: 605px;
         height: 100%;
 	float:left;
-        margin-top: 20px;
+        margin-top: 0px;
 }
 .column2 tr td { padding-top: 15px;
                 padding-bottom: 15px;
@@ -106,11 +106,11 @@
                 <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="width: 100%;"></a>
         </div>
         <div class="tophead" style="text-align: center;width: 100%; max-width: 250px;padding-top: 20px;padding-bottom: 50px;float: right">
-                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Blog</a>
+                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Blog</a>
                  
-                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Free Webinars | </a>
+                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Free Webinars | </a>
                   
-                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">About  |</a>
+                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">About  |</a>
 		
         </div> <div style="clear: both;"></div>
     <div class="column-wrap">
@@ -122,7 +122,7 @@
                             <div class="text1" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 42px;font-weight: bold;padding-left: 15px;padding-top: 10px">Congratulations</div>
                             <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;border-bottom: solid thin #ddd;width: 80%;padding-bottom: 10px"><br>You finished your first week on Marketfy.<br>
                             </div>
-                            <div class="text6" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #686868;font-size: 20px;padding-left: 15px;padding-top: 10px;width: 98%">Hey,
+                            <div class="text6" style="max-width: 550px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #686868;font-size: 20px;padding-left: 15px;padding-top: 10px;width: 98%">Hey,
                                 <br><br>
                                 How’s your first week on Marketfy been?<br><br>
                                 Now that you’ve learned a thing or two from the free webinars this week, make sure to share the success with your friends.
