--- a/register_alt_2.html
+++ b/register_alt_2.html
@@ -40,18 +40,18 @@
                 <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="width: 100%;"></a>
         </div>
         <div class="tophead" style="text-align: center;width: 100%; max-width: 250px;padding-top: 20px;padding-bottom: 50px;float: right">
-                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Blog</a>
+                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Blog</a>
                  
-                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Free Webinars | </a>
+                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">Free Webinars | </a>
                   
-                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">About  |</a>
+                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4A6785;font-size: 17px;">About  |</a>
 		
         </div> <div style="clear: both;"></div>
     <div class="imagebig" style="text-align: center; background-color: #ffffff;">
-        <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/banner_steps.e318e3366814.jpg" style="max-width: 100%;">
+        <img src="http://naderion.eu/clientimagehost/banner_steps.jpg" style="max-width: 100%;">
     </div>
     <div style="margin: 0 auto; width: 100%; background: #fff; padding-bottom: 20px;">
-        <div class="text2" id="margtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 18px;font-weight: normal;text-align: center;padding-top: 45px; background: #fff; text-align: left;">
+        <div class="text2" id="margtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 18px;font-weight: normal;text-align: center;padding-top: 5px; background: #fff; text-align: left;">
             <div style=" color: #4a6785; font-style:italic; font-size: 24px; font-weight: bold;"> Hey [First Name],</div><br>
             Trading a new strategy can be extremely profitable…<br><br>
             … but finding, learning and adapting the <u>right</u> strategy can be a challenge.<br><br>
