--- a/register_3.html
+++ b/register_3.html
@@ -100,10 +100,10 @@
 		
         </div> <div style="clear: both;"></div>
     <div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 20px;">
-        <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
+        <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a6785; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;padding-bottom: 10px;border-top: solid #ffffff;">
             Just for you…
         </div>
-        <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;">
+        <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 20px;font-weight: normal;text-align: center;padding-left: 15px;padding-top:2px; background: #fff; text-align: left;">
         <br>
         Hey,<br><br>
         Based on what you’ve told us about your trading style, here are a few products you may be interested in...
@@ -184,10 +184,10 @@
         </div>
         <div style="clear: both;"></div>
         <div style=" font-family: Arial; padding: 20px;">
-             <div style="text-align: center; color: #5d5a5b; font-style:italic; font-size: 24px; font-weight: bold; margin: 20px 0;padding-top: 10px;">
+             <div style="text-align: center; color: #5d5a5b; font-style:italic; font-size: 20px; font-weight: bold; margin: 20px 0;padding-top: 10px;">
                 Use coupon code, “FirstBuy” to save 15% off of your first purchase on Marketfy.
             </div>
-            <div style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;padding-bottom: 10px;">
+            <div style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 20px;padding-left: 15px;padding-bottom: 10px;">
                 So, what are you waiting for? <b>Nic Chahine has generated over 20% this year alone!</b><br><br>
                 How much profit will you lose out before you join? <br><br>
                 Start trading with your recommended products by clicking the “learn more” buttons shown above.
