--- a/register_alt_1.html
+++ b/register_alt_1.html
@@ -88,12 +88,7 @@
     <title>Register Email</title>
 </head>
 <body style="background-color: #f2f2f2; width: 100%; max-width: 980px; margin: 0 auto;">
-    <div class="tophead" style="text-align: center; width: 100%;">
-        <a href="http://marketfy.com" style="text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">
-            <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="max-width: 100%;">
-        </a>
-    </div>
-	<div class="tophead" style="text-align: center;width: 100%; max-width: 400px;padding-bottom: 50px;float: left">
+   <div class="tophead" style="text-align: center;width: 100%; max-width: 400px;padding-bottom: 50px;float: left">
 		<a href="http://marketfy.com" style="text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">
                 <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="width: 100%;"></a>
         </div>
@@ -106,10 +101,10 @@
 		
         </div> <div style="clear: both;"></div>
     <div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 20px;">
-        <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
+        <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a6785; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
             Welcome to Marketfy
         </div>
-        <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #000;font-size: 20px;padding-left: 15px;">
+        <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 20px;padding-left: 15px;">
         <br>
         Hey [First Name],<br><br>
         Thanks for signing up for Marketfy. We’re here to help you trade and invest better. <br><br>
@@ -207,9 +202,9 @@
         <div style="clear: both;"></div>
         <div style="font-family: Arial; padding: 20px; padding-top: 150px;">
              
-            <div style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #000;font-size: 20px;;padding-left: 15px;">
+            <div style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 20px;;padding-left: 15px;">
                Ready to take the first step to experiencing that success?<br><br>
-               <a style="text-decoration: underline; color: #000;" href="http://marketfy.com/product/webinars/">Get started today >> </a>
+               <a style="text-decoration: underline; color: #404040;" href="http://marketfy.com/product/webinars/">Get started today >> </a>
             </div>
         </div>
         <div style="clear: both;"></div>
