--- a/register_1.html
+++ b/register_1.html
@@ -108,7 +108,7 @@
 		
         </div> <div style="clear: both;"></div>
 	<div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 20px;">
-            <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
+            <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a6785; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
                 Welcome to Marketfy.
             </div>
             <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;">
@@ -139,7 +139,7 @@
                                     <div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">EXPLORE THE PRODUCTS</div>
                                     <div class="textdesc" style=" padding: 2px 6px 2px 6px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 18px;text-align: center;margin-top: 10px;">Discover the products that will help you achieve your trading goals by filtering the Marketfy homepage by product type and asset class.
                                     </div>
-                                    <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 50px;margin-bottom: 25px;text-align: center;font-size: 17px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/" style="text-align: center;text-decoration: none;color: #ffffff;">EXPLORE PRODUCTS</a></div>
+                                    <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 53px;margin-bottom: 25px;text-align: center;font-size: 17px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/" style="text-align: center;text-decoration: none;color: #ffffff;">EXPLORE PRODUCTS</a></div>
                                 </div>
                             </td>
                         </tr>
