--- a/register_11.html
+++ b/register_11.html
@@ -119,13 +119,13 @@
                 <tr>
                     <td>				
                         <div class="leftfloat" style="background: white; padding: 0 0 50px 0; border-top: solid #fff">
-                            <div class="text1" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 42px;font-weight: bold;padding-left: 15px;padding-top: 10px">
+                            <div class="text1" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a6785;font-size: 42px;font-weight: bold;padding-left: 15px;padding-top: 10px">
                                 Get Inspired…
                             </div>
                             <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;border-bottom: solid thin #ddd;width: 80%;padding-bottom: 10px">
                                 … to start finding success! 
                             </div>
-                            <div class="text6" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #686868;font-size: 20px;padding-left: 15px; padding-top: 10px;width: 98%">
+                            <div class="text6" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 20px;padding-left: 15px; padding-top: 10px;width: 98%">
                                 <br>
                                 Hey [First Name],<br><br>
                                 Marketfy was created to help you trade & invest better. <br><br>
