--- a/register_12.html
+++ b/register_12.html
@@ -100,10 +100,10 @@
 		
         </div> <div style="clear: both;"></div>
     <div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 20px;">
-        <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
+        <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a6785; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
             Check out our featured products…
         </div>
-        <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #000;font-size: 20px;padding-left: 15px;padding-bottom: 10px;">
+        <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 20px;padding-left: 15px;padding-bottom: 10px;">
            <br>
           Hey [First Name],<br><br>
           We know finding the right product to help you trade better can be just as difficult as trading itself.<br><br>
@@ -171,7 +171,7 @@
         <div style="clear: both;"></div>
         <div style=" font-family: Arial; padding: 0px 20px 20px 20px;">
             
-            <div style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #000;font-size: 20px;padding-left: 15px;padding-bottom: 10px;">
+            <div style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 20px;padding-left: 15px;padding-bottom: 10px;">
                 Ready to find out what prodcuts and free resources will help you?  <br><br>
                
             <div class="button1" style=" text-align: center; background-color: #4a6785;max-width: 395px;height: 54px;margin: 0 auto;margin-top: 30px;margin-bottom: 25px;text-align: center;font-size: 18px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;">
