--- a/register_2.html
+++ b/register_2.html
@@ -103,11 +103,11 @@
 		
         </div> <div style="clear: both;"></div>
     <div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 70px;">
-        <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
+        <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a6785; font-size: 42px; font-weight: bold;padding-left: 13px;padding-top: 10px;border-top: solid #ffffff;">
           Get started with Marketfy…
     </div>
-        <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #000;font-size: 20px;padding-left: 15px;">
-            <br>  Hey [first name], <br /> <br /> 
+         <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 20px;padding-left: 15px;">
+        <br>  Hey [first name], <br> <br> 
 
         Marketfy brings together the top trade alerts, education, trading rooms, and chatrooms to one, easy-to-use platform. <br /> <br /> 
 
@@ -171,7 +171,7 @@
             </div>                  
             <div class="clear"></div>
             <hr style="max-width: 95%; background-color: #efefef; color:#efefef; border: 0px; height: 1px;">
-            <div style="text-align: center; color: #5d5a5b; font-size: 18px; ">Ready to Dive in?</div>
+            <div style="text-align: center; color: #404040; font-size: 18px; ">Ready to Dive in?</div>
             <div style="max-width: 100%; height: 50px; padding-bottom: 20px;">   
             <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 20px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;">
                 <a href="http://marketfy.com/store/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">
