--- a/register_4.html
+++ b/register_4.html
@@ -119,10 +119,10 @@
                 <tr>
                     <td>				
                         <div class="leftfloat" style="background: white; padding: 0 0 50px 0; border-top: solid #fff">
-                            <div class="text1" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 42px;font-weight: bold;padding-left: 15px;padding-top: 10px">Congratulations</div>
+                            <div class="text1" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a6785;font-size: 42px;font-weight: bold;padding-left: 15px;padding-top: 10px">Congratulations</div>
                             <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;border-bottom: solid thin #ddd;width: 80%;padding-bottom: 10px"><br>You finished your first week on Marketfy.<br>
                             </div>
-                            <div class="text6" style="max-width: 550px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #686868;font-size: 20px;padding-left: 15px;padding-top: 10px;width: 98%">Hey,
+                            <div class="text6" style="max-width: 550px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 20px;padding-left: 15px;padding-top: 10px;width: 98%">Hey,
                                 <br><br>
                                 How’s your first week on Marketfy been?<br><br>
                                 Now that you’ve learned a thing or two from the free webinars this week, make sure to share the success with your friends.
