--- a/register_alt_4.html
+++ b/register_alt_4.html
@@ -100,7 +100,7 @@
 		
         </div> <div style="clear: both;"></div>
     <div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 20px;">
-        <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
+        <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a6785; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
             Your Special Welcome Promotion…
         </div>
         <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #000;font-size: 20px;padding-left: 15px;padding-bottom: 10px;">
