--- a/register_3.html
+++ b/register_3.html
@@ -44,7 +44,7 @@
 .clear { display: block; clear: both; }
 
 
-@media only screen and (max-width: 980px) {
+@media only screen and (max-width: 600px) {
 	
 	a[class="btn"] { display:block!important; margin-bottom:10px!important; background-image:none!important; margin-right:0!important;}
 
@@ -83,6 +83,35 @@
          display: none;
         }
     }
+     @media (max-width: 1000px) {
+                            .column{
+                                width: 180px;
+                            }
+                            .button1{
+                                margin: 0 auto!important;
+                                width: 150px!important;
+                                font-size: 12px!important;
+                                margin-top: 43px!important;
+                            }
+                            .button2{
+                                margin: 0 auto!important;
+                                width: 150px!important;
+                                font-size: 12px!important;
+                                margin-top: 0px!important;
+                            }
+                            .sosmed{
+                                margin-top: 0px!important;
+                                
+                            }
+                            .column{
+                                padding-bottom: 50px!important;
+                            }
+                        }
+                        @media (min-width: 620px) and (max-width: 1000px) {
+                           .column tr td { 
+                           margin: 0 auto!important; 
+                        }  
+                        }
     </style>
     <title>Register Email</title>
 </head>
