--- a/register_1.html
+++ b/register_1.html
@@ -47,7 +47,7 @@
                             display: block; 
                             clear: both; 
                         }
-                        @media only screen and (max-width: 980px) {
+                        @media only screen and (max-width: 600px) {
                             a[class="btn"] { 
                                 display:block!important; 
                                 margin-bottom:10px!important; 
@@ -90,6 +90,35 @@
                         .imagelogo {
                             display: none;
                         }
+                        }
+                        @media (max-width: 1000px) {
+                            .column{
+                                width: 180px;
+                            }
+                            .button1{
+                                margin: 0 auto!important;
+                                width: 150px!important;
+                                font-size: 12px!important;
+                                margin-top: 43px!important;
+                            }
+                            .button2{
+                                margin: 0 auto!important;
+                                width: 150px!important;
+                                font-size: 12px!important;
+                                margin-top: 0px!important;
+                            }
+                            .sosmed{
+                                margin-top: 0px!important;
+                                
+                            }
+                            .column{
+                                padding-bottom: 50px!important;
+                            }
+                        }
+                        @media (min-width: 620px) and (max-width: 1000px) {
+                           .column tr td { 
+                           margin: 0 auto!important; 
+                        }  
                         }
                     </style>
                 <title>Register Email</title>
@@ -139,7 +168,7 @@
                                     <div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">EXPLORE THE PRODUCTS</div>
                                     <div class="textdesc" style=" padding: 2px 6px 2px 6px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 18px;text-align: center;margin-top: 10px;">Discover the products that will help you achieve your trading goals by filtering the Marketfy homepage by product type and asset class.
                                     </div>
-                                    <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 53px;margin-bottom: 25px;text-align: center;font-size: 17px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/" style="text-align: center;text-decoration: none;color: #ffffff;">EXPLORE PRODUCTS</a></div>
+                                    <div class="button2" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 53px;margin-bottom: 25px;text-align: center;font-size: 17px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/" style="text-align: center;text-decoration: none;color: #ffffff;">EXPLORE PRODUCTS</a></div>
                                 </div>
                             </td>
                         </tr>
